--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.obsidian/
 
 # Created by https://www.toptal.com/developers/gitignore/api/kicad
 # Edit at https://www.toptal.com/developers/gitignore?templates=kicad
